# facet-pretty

./: CHANGELOG.md  Cargo.toml  README.md
src/: display.rs  printer.rs
tests/: pretty_print.rs
