[package]
name = "facet-pretty"
version = "0.29.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-pretty"
description = "Pretty-printing for types implementing the Facet trait"
keywords = [
    "pretty-print",
    "formatting",
    "reflection",
    "serialization",
    "visualization",
]
categories = ["development-tools", "visualization", "command-line-utilities"]

[features]
alloc = ["facet-core/alloc", "facet-reflect/alloc"] # Enables alloc support
camino = ["alloc", "facet-core/camino"]

[dependencies]
facet-core = { version = "0.29" }
facet-reflect = { version = "0.29" }

[dev-dependencies]
camino = "1.1.10"
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
facet = { version = "0.29" }
facet-testhelpers = { version = "0.29" }
insta = "1.43.1"
